--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-4.88MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-543.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇻🇳 越南-4.80MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.28MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-610.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-779.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 164.70.68.67, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-386.6KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-447.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-439.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-930.1KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-6.75MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-375.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-448.1KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20170, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.32MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-337.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-610.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-779.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-624.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-613.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
