--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-177.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-337.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-312.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
-  - {name: 🇭🇰 香港-1.32MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-821.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.33MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-5.68MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.84MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-312.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-432.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇻🇳 越南-3.16MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-3.28MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.39MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-319.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-349.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-177.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-337.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-821.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.33MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.16MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
